--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,31 +1,37 @@
-{% assign skills = site.data.data.skills %}
-{% if skills %}
-<section class="skills-section section">
+{% assign skills = site.data.data.sidebar.skills %}
 
-  <h2 class="section-title">
-    <span class="fa-stack fa-xs">
-      <i class="fas fa-circle fa-stack-2x"></i>
-      <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
-    </span>
-    {{ skills.title }}
+{% if skills.technical %}
+<div class="skills-container container-block">
+
+  <h2 class="container-block-title">
+    {{ skills.technical.title }}
   </h2>
 
-  <div class="skillset">
-
-    {% for skill in skills.toolset %}
-    <div class="item">
-
-      <h3 class="level-title">{{ skill.name }}</h3>
-
-      <div class="level-bar">
-        <div class="level-bar-inner" data-level="{{ skill.level }}">
-        </div>
-      </div><!--//level-bar-->
-
-    </div><!--//item-->
+  <ul class="list-unstyled interests-list">
+    {% for skill in skills.technical.skillset %}
+    <li>
+      {{ skill.name }}
+    </li>
     {% endfor %}
+  </ul>
 
-  </div>
+</div>
+{% endif %}
 
-</section><!--//skills-section-->
+{% if skills.soft %}
+<div class="skills-container container-block">
+
+  <h2 class="container-block-title">
+    {{ skills.soft.title }}
+  </h2>
+
+  <ul class="list-unstyled interests-list">
+    {% for skill in skills.soft.skillset %}
+    <li>
+      {{ skill.name }}
+    </li>
+    {% endfor %}
+  </ul>
+
+</div>
 {% endif %}
